tests/parse_print/random_perturb/enum_liberated/change-01/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/enum_liberated/change-01/change-01.essence:13:11:
unexpected )
expecting comma, end of input, rest of statement, or statement
    find k : E)
              ^